--- a/angular.json
+++ b/angular.json
@@ -129,7 +129,10 @@
     }
   },
   "cli": {
-    "schematicCollections": ["@ionic/angular-toolkit"]
+    "schematicCollections": [
+      "@ionic/angular-toolkit"
+    ],
+    "analytics": "f2bb952f-f6a6-4501-a3fe-5945adc4ae43"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
